--- a/admin/src/style.css
+++ b/admin/src/style.css
@@ -1,4 +1,84 @@
 /*Default*/
+@keyframes backgroundColorPalette {
+    0% {
+      background: #ff1100;
+    }
+    25% {
+      background: #1d2327;
+    }
+    50% {
+      background: #ff1100;
+    }
+    75% {
+      background: #1d2327;
+    }
+    100% {
+      background: #ff1100;
+    }
+  }
+
+
+.wp_maintenance_senpai_menu_item_class {
+    animation-name: backgroundColorPalette;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+.senpai-maintenance-tab.active {
+    box-shadow: inset 0 -3px #3582c4;
+    font-weight: 600;
+}
+a:active, a:hover {
+    color: #135e96;
+}
+#wpcontent {
+    padding-left: 0px; 
+}
+.senpai-maintenance-header{
+    padding-top: 1rem;
+}
+.senpai-maintenance-tab {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    padding: 0.5rem 1rem 1rem;
+    margin: 0 1rem;
+    transition: box-shadow .5s ease-in-out;
+}
+.senpai-maintenance-settings-header {
+    text-align: center;
+    margin: 0 0 1rem;
+    background: #fff;
+    border-bottom: 1px solid #dcdcde;
+}
+.senpai-maintenance-title-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    clear: both;
+    padding-top: 8px;
+}
+.senpai-maintenance-tabs-wrapper {
+    display: -ms-inline-grid;
+    -ms-grid-columns: 1fr 1fr;
+    vertical-align: top;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr;
+}
+.senpai-maintenance-header {
+    text-align: center;
+    margin: 0 0 1rem;
+    background: #fff;
+    border-bottom: 1px solid #dcdcde;
+}
+.senpai-maintenance-body {
+    max-width: 800px;
+    margin: 0 auto;
+}
+.senpai-maintenance-hidden{
+    display: none !important;
+}
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) { 
